# poseidon-backport

./: .gitignore  .gitmodules  AROS-BASELINE  CMakeLists.txt  CONTRIBUTING.md  LEGAL  README.md  build.sh  deploy-amiga.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
c/: CMakeLists.txt
classes/: class_end.c  class_main.c  class_version.h  common.h  debug.c  debug.h  mui_base.h
classes/arosx/: CMakeLists.txt  arosx.class.c  arosx.class.config.gui.c  arosx.class.h  arosx.h  arosx.library.c  arosx.sfd
classes/asixeth/: CMakeLists.txt  asixeth.class.c  asixeth.class.h  asixeth.h  dev.c  dev.h
classes/audio/: CMakeLists.txt  usbaudio.class.c  usbaudio.class.h  usbaudio.h
classes/bluetooth/: CMakeLists.txt  bluetooth.class.c  bluetooth.class.h  bluetooth.h  dev.c  dev.h
classes/bootkeyboard/: CMakeLists.txt  bootkeyboard.class.c  bootkeyboard.class.h  bootkeyboard.h
classes/bootmouse/: CMakeLists.txt  bootmouse.class.c  bootmouse.class.h  bootmouse.h
classes/camdmidi/: CMakeLists.txt  camd_vectors.h  camdusbmidi.class.c  camdusbmidi.class.h  camdusbmidi.h  camdusbmidi.sfd
classes/camdmidi/camd/: camddriver.ld  gen_camddriver.py  poseidonusb.c
classes/cdcacm/: CMakeLists.txt  cdcacm.class.c  cdcacm.class.h  cdcacm.h  dev.c  dev.h
classes/cdceth/: CMakeLists.txt  cdceth.class.c  cdceth.class.h  cdceth_encap.c  dev.c  dev.h
classes/davicometh/: CMakeLists.txt  dev.c  dev.h  dm9601eth.class.c  dm9601eth.class.h  dm9601eth.h
classes/dfu/: CMakeLists.txt  dfu.class.c  dfu.class.h  dfu.h
classes/egalaxtouch/: CMakeLists.txt  egalaxtouch.class.c  egalaxtouch.class.h  egalaxtouch.h
classes/ethwrap/: CMakeLists.txt  dev.c  dev.h  ethwrap.class.c  ethwrap.class.h  ethwrap.h
classes/hid/: CMakeLists.txt  hid.class.c  hid.class.h  hid.gui.c  hid.h  hidctrl.gui.c
classes/hub/: CMakeLists.txt  hub.class.c  hub.class.h  hub.h
classes/hubss/: CMakeLists.txt  hubss.class.c  hubss.class.h
classes/lan78xx/: CMakeLists.txt  dev.c  dev.h  lan78xx.class.c  lan78xx.class.h
classes/massstorage/: CMakeLists.txt  dev.c  dev.h  massstorage.class.c  massstorage.class.h  massstorage.h  massstorage_bulk.c  massstorage_cbi.c  massstorage_uas.c
classes/moschipeth/: CMakeLists.txt  dev.c  dev.h  moschipeth.class.c  moschipeth.class.h  moschipeth.h
classes/palmpda/: CMakeLists.txt  dev.c  dev.h  palmpda.class.c  palmpda.class.h  palmpda.h
classes/pegasuseth/: CMakeLists.txt  dev.c  dev.h  pegasus.class.c  pegasus.class.h  pegasus.h
classes/printer/: CMakeLists.txt  dev.c  dev.h  printer.class.c  printer.class.h  printer.h
classes/ptp/: CMakeLists.txt  ptp.class.c  ptp.class.h  ptp.h
classes/rawwrap/: CMakeLists.txt  dev.c  dev.h  rawwrap.class.c  rawwrap.class.h  rawwrap.h
classes/rndis/: CMakeLists.txt  dev.c  dev.h  if_urndis.c  rndis.class.c  rndis.class.h  rndis.h
classes/serialcp210x/: CMakeLists.txt  dev.c  dev.h  serialcp210x.class.c  serialcp210x.class.h  serialcp210x.h
classes/serialpl2303/: CMakeLists.txt  dev.c  dev.h  serialpl2303.class.c  serialpl2303.class.h  serialpl2303.h
classes/simplemidi/: CMakeLists.txt  simplemidi.class.c  simplemidi.class.h  simplemidi.h
classes/stir4200/: CMakeLists.txt  dev.c  dev.h  stir4200.class.c  stir4200.class.h  stir4200.h
cmake/: GenerateSfdHeaders.cmake  Packaging.cmake  PoseidonDebug.cmake  poseidon_debug_serial_glue.c  toolchain.cmake
include/: aros_compat.h  debug.h  mui_newobject_fix.h
include/devices/: newmouse.h
include/libraries/: poseidon.h
include/midi/: camddevices.h
poseidon.library/: CMakeLists.txt  debug.h  popo.gui.c  popo.gui.h  popo_stub.c  poseidon.library.c  poseidon.library.h  poseidon.sfd  poseidon_end.c  poseidon_funcs.inc  poseidon_intern.h  poseidon_main.c  usbromearlystartup.c
scripts/: docker-build.sh
tools/: CMakeLists.txt  DRadioTool.c  PencamTool.c  PowManTool.c  RocketTool.c  SonixcamTool.c  UPSTool.c  debug.h
trident/: ActionClass.c  ActionClass.h  CMakeLists.txt  CfgListClass.c  CfgListClass.h  DevWinClass.c  DevWinClass.h  IconListClass.c  IconListClass.h  Trident.c  debug.h  locale.c
trident/catalogs/: trident.cd
usbclass.library/: CMakeLists.txt  usbclass.conf  usbclass.sfd
